# cluspro-automation-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/commands/: gp.md
.github/workflows/: ci.yml
config/: settings.yaml
docs/: VALIDATION.md  WORKFLOW.md
examples/: MRGX2_MOUSE_topology.json  example_workflow.py  sample_jobs.csv  sample_mapping.csv
src/cluspro/: __init__.py  auth.py  browser.py  cli.py  database.py  download.py  organize.py  queue.py  results.py  retry.py  submit.py  utils.py  validate.py
tests/: __init__.py  conftest.py  test_auth.py  test_browser.py  test_cli.py  test_database.py  test_download.py  test_organize.py  test_queue.py  test_results.py  test_retry.py  test_submit.py  test_utils.py  test_validate.py
